# zero2prod

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  spec.yaml
.github/workflows/: general.yml
db/init/: 01_initialize_database.sql
migrations/: 20220502174907_create_subscriptions_table.sql
src/: configuration.rs  domain.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs
